--- a/todo.txt
+++ b/todo.txt
@@ -189,3 +189,5 @@ move get config and user credentials into config
 todo: add medium
 ----------------------------
 cannot do cargo build while docker build with this library = { path = "./library" }
+----------------------------
+if !eeeeee.attributes.contains_key("href") {}
