--- a/todo.txt
+++ b/todo.txt
@@ -197,3 +197,5 @@ command for run not a cargo run but cd libs/tests_lib && cargo test local && cd 
 github user credentials tests
 ----------------------------
 test for user credentials structure fields - if there is any new then fail
+----------------------------
+why hashmap['key'] do not return Result ?????7
