todo something wrong with twitter logs

--- a/todo.txt
+++ b/todo.txt
@@ -197,3 +197,6 @@ why hashmap['key'] do not return Result ?????7
 server what running web tests every hour like http requests and get valid data or not
 ----------------------------
 github parsing version to check different structs of posts as test in the loop
+----------------------------
+logs were written in file logs/warning_logs/Twitter/unhandled_success_handled_success_are_there_items_initialized_posts/Twitter-.json
+why only half of the name????/
