todo: check if there already file with same name while writinig error logs into file system

--- a/todo.txt
+++ b/todo.txt
@@ -215,3 +215,5 @@ value.1""
 value.1""
 ---------------------------
 parsing check field is empty
+---------------------------
+check if there already file with same name while writinig error logs into file system
