--- a/todo.txt
+++ b/todo.txt
@@ -192,7 +192,7 @@ cannot do cargo build while docker build with this library = { path = "./library
 ----------------------------
 parsing providers posts tests
 ----------------------------
-why hashmap['key'] do not return Result ?????7
+why hashmap['key'] do not return Result ?????7  maybe switch to stable instead of nightly
 ----------------------------
 server what running web tests every hour like http requests and get valid data or not
 ----------------------------
@@ -216,3 +216,7 @@ thread 'main' panicked at 'called `Result::unwrap()` on an `Err` value: Any', sr
 parts of config as feature flags? 
 -----------------------------
 handle all todos in parse_github_html
+-----------------------------
+different files todos and thoughts
+-----------------------------
+db mongodb or postgres
