--- a/todo.txt
+++ b/todo.txt
@@ -106,7 +106,8 @@ find this in code and fix "(todo change this print)"
 ----------------------------
 limit for mongo "get data" functions
 ----------------------------
-move 
-//mongodb://root:rootpassword@localhost:27017
-    //mongodb+srv://mongodbcloudlogin:mongodbcloudpassword@tufa-mongo.y2xob.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-    to user credentials
+move this from config 
+mongodb://root:rootpassword@localhost:27017
+mongodb+srv://mongodbcloudlogin:mongodbcloudpassword@tufa-mongo.y2xob.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+to user credentials
+----------------------------- 
