todo: implement different versions of get_providers_link_parts

--- a/todo.txt
+++ b/todo.txt
@@ -147,3 +147,5 @@ fn main() {
 }
 -----------------------------------
 github parsing return in second parameter option<String, line! file!> to analize missing parse logic 
+-----------------------------------
+implement get_providers_link_parts with all success completed and with not all
