--- a/todo.txt
+++ b/todo.txt
@@ -150,3 +150,6 @@ github parsing return in second parameter option<String, line! file!> to analize
 -----------------------------------
 implement get_providers_link_parts with all success completed and with not all
 test commit2
+----------------------------------------------------------------
+get_providers_link_parts whole and for each provider
+and maybe rewrite it as struct with methods
