todo: remove enable prints for provider function parameter and move it to print_colorful_message

--- a/todo.txt
+++ b/todo.txt
@@ -155,3 +155,5 @@ get_providers_link_parts whole and for each provider
 and maybe rewrite it as struct with methods
 ----------------------------------------------------------------
 test to check what cargo run executes in the right folder
+----------------------------------------------------------------
+remove enable prints for provider function parameter and move it to print_colorful_message
