--- a/todo.txt
+++ b/todo.txt
@@ -157,3 +157,5 @@ and maybe rewrite it as struct with methods
 test to check what cargo run executes in the right folder
 ----------------------------------------------------------------
 remove enable prints for provider function parameter and move it to print_colorful_message
+----------------------------------------------------------------
+time measurement as prints_lib - check with config in implementation, not in function what use it 
