--- a/todo.txt
+++ b/todo.txt
@@ -159,3 +159,5 @@ test to check what cargo run executes in the right folder
 remove enable prints for provider function parameter and move it to print_colorful_message
 ----------------------------------------------------------------
 time measurement as prints_lib - check with config in implementation, not in function what use it 
+----------------------------------------------------------------
+somehow merge ProviderKind enum and in config vec_of_provider_names = ["arxiv", "biorxiv", "github", "habr", "medrxiv", "reddit", "twitter"]
