--- a/todo.txt
+++ b/todo.txt
@@ -158,3 +158,7 @@ time measurement as prints_lib - check with config in implementation, not in fun
 somehow merge ProviderKind enum and in config vec_of_provider_names = ["arxiv", "biorxiv", "github", "habr", "medrxiv", "reddit", "twitter"]
 --------------------------------------------------------------------------------------------------------------------------------
 Resource::PostgreSql => { 
+------------------------------------------------------------------------------------------------------
+let mut vec_of_enums: Vec<ProviderKind> =
+            Vec::with_capacity(CONFIG.params.vec_of_provider_names.len());
+        //check if provider_names are unique
