todo: rename check_new_posts_threads_parts

--- a/todo.txt
+++ b/todo.txt
@@ -162,3 +162,5 @@ Resource::PostgreSql => {
 let mut vec_of_enums: Vec<ProviderKind> =
             Vec::with_capacity(CONFIG.params.vec_of_provider_names.len());
         //check if provider_names are unique
+----------------------------------------------------------------
+rename this check_new_posts_threads_parts
