--- a/todo.txt
+++ b/todo.txt
@@ -164,3 +164,7 @@ let mut vec_of_enums: Vec<ProviderKind> =
         //check if provider_names are unique
 ----------------------------------------------------------------
 rename this check_new_posts_threads_parts
+----------------------------------------------------------------
+Struct itertools::structs::Unique
+//check if provider_names are unique
+            for provider_name in &CONFIG.params.vec_of_provider_names {
